--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <form action="/requests" method="POST">
+    <!--<form action="/requests" method="POST">
         <input type="text" placeholder="name" name="name">
         <input type="text" placeholder="quote" name="quote">
         <button type="submit">Submit</button>
-    </form>
+    </form>-->
 </body>
 <script src="js/app.js" defer></script>
 
