--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         <input type="text" placeholder="quote" name="quote">
         <button type="submit">Submit</button>
     </form>-->
+    <div id="current_projects"></div>
 </body>
 <script src="js/app.js" defer></script>
 
